--- a/index.html
+++ b/index.html
@@ -7,13 +7,40 @@
 </head>
 <body>
   <div class="controls">
-    <label>Monto: <input id="amount" type="number" value="287"></label>
-    <label>Denominaciones: <input id="coins" value="100,50,20,10,5,1"></label>
-    <button id="startBtn">▶️ Start</button>
-    <button id="resetBtn">↻ Reset</button>
-    <label>Velocidad: <input id="speed" type="range" min="100" max="2000" step="100" value="500"></label>
+    <!-- Sección Monto -->
+    <div class="section">
+      <label for="amount">Monto:</label>
+      <input id="amount" type="number" value="">
+    </div>
+
+    <!-- Sección Denominaciones -->
+    <div class="section">
+      <label for="coins">Denominaciones:</label>
+      <input id="coins" type="number" value="">
+    </div>
+
+    <!-- Sección Botones -->
+    <div class="section2">
+      <button id="startBtn">▶ Start</button>
+      <button id="resetBtn">↻ Reset</button>
+    </div>
+
+    <!-- Sección Velocidad -->
+    <div class="section">
+      <label for="speed">Velocidad:</label>
+      <input
+        id="speed"
+        type="range"
+        min="100"
+        max="2000"
+        step="100"
+        value="500"
+      >
+    </div>
   </div>
+
   <svg id="viz" width="100" height="200"></svg>
-  <script src="greedyAlgorhitm.js"></script>
+  <script src="greedyAlgorithm.js"></script>
 </body>
 </html>
+
