--- a/homo/index.html
+++ b/homo/index.html
@@ -9,15 +9,12 @@
 <body>
   <h1>Calculadora de Fibonacci</h1>
   
-  <p>Ingresa los índices de Fibonacci que deseas obtener, separados por comas (ej. "0,1,5,10"):</p>
-  <input type="text" id="indicesInput" placeholder="Ejemplo: 0,1,5,10">
+  <p>Ingresa cualquier numero para conocer su secuencia de fibonacci:</p>
+  <input type="text" id="indicesInput" placeholder="Ejemplo: 0,10,55,100">
   <button onclick="calcularFibonacci()">Calcular</button>
 
   <h2>Secuencia completa de Fibonacci:</h2>
   <ul id="fibonacciSequence"></ul> <!-- Lista donde se mostrará la secuencia completa -->
-
-  <h2>Resultados:</h2>
-  <table id="resultados"></table>
 
   <script src="fibonacci.js"></script> <!-- Vincula el archivo JS -->
 </body>
